--- a/neo3-gui/neo3-gui/ClientApp/src/index.css
+++ b/neo3-gui/neo3-gui/ClientApp/src/index.css
@@ -1,3 +1,5 @@
+@import './static/css/variables.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
